- Fixed issues and improved code for ScheduleEditor
- Fixed some issues from #127 Schedule task list

--- a/Core.Wpf/Views/ChildDialogWindow.xaml
+++ b/Core.Wpf/Views/ChildDialogWindow.xaml
@@ -10,7 +10,8 @@
                   d:DesignHeight="300"
                   d:DesignWidth="300"
                   d:DataContext="{d:DesignInstance mvvm:IDialogViewModel}"
-                  IsModal="True">
+                  IsModal="True"
+                  x:Name="window">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
