--- a/ScheduleEditorModule/Views/HeaderView.xaml
+++ b/ScheduleEditorModule/Views/HeaderView.xaml
@@ -9,8 +9,11 @@
                       mc:Ignorable="d"
                       d:DesignHeight="300"
                       d:DesignWidth="300"
-                      d:DataContext="{d:DesignInstance viewModels:HeaderViewModel}"
-                      Header="Редактор расписания">
+                      d:DataContext="{d:DesignInstance viewModels:HeaderViewModel}">
+    <fluent:RibbonTabItem.Header>
+        <TextBlock Text="Редактор расписания"
+                   Style="{x:Null}" />
+    </fluent:RibbonTabItem.Header>
     <fluent:RibbonGroupBox Header="Дата">
         <fluent:Button Size="Large"
                        LargeIcon="pack://application:,,,/ScheduleModule;Component/Resources/Images/PreviousWeek48x48.png"
