--- a/ScheduleModule/Views/ContentView.xaml
+++ b/ScheduleModule/Views/ContentView.xaml
@@ -21,15 +21,6 @@
     </UserControl.Resources>
     <Grid>
         <DockPanel LastChildFill="True">
-            <!--Schedule filters-->
-                    <Button Content="Отменить перенос"
-                            Width="150"
-                            Margin="5"
-                            Padding="5"
-                            Background="White"
-                            Visibility="{Binding IsMovingAssignment, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
-                            Command="{Binding CancelAssignmentMovementCommand, Mode=OneTime}" 
-                            DockPanel.Dock="Top" />
             <Grid HorizontalAlignment="Stretch"
                   VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
@@ -66,7 +57,8 @@
                               Grid.Column="0"
                               HorizontalScrollBarVisibility="Disabled"
                               VerticalScrollBarVisibility="Hidden"
-                              behaviors:ScrollSynchronizer.VerticalScrollGroup="ScheduleVerticalScroll">
+                              behaviors:ScrollSynchronizer.VerticalScrollGroup="ScheduleVerticalScroll"
+                              Background="White">
                     <Grid>
                         <ListBox IsHitTestVisible="False"
                                  ItemsSource="{Binding TimeTickers}"
@@ -102,7 +94,8 @@
                               Grid.Column="1"
                               VerticalScrollBarVisibility="Disabled"
                               HorizontalScrollBarVisibility="Hidden"
-                              behaviors:ScrollSynchronizer.HorizontalScrollGroup="ScheduleHorizontalScroll">
+                              behaviors:ScrollSynchronizer.HorizontalScrollGroup="ScheduleHorizontalScroll"
+                              MinHeight="50">
                     <StackPanel Orientation="Horizontal">
                         <ItemsControl ItemsSource="{Binding FilteredRooms}"
                                       IsEnabled="False"
@@ -130,7 +123,9 @@
                                                            Text="{Binding Number, StringFormat='#{0}', Mode=OneTime}" />
                                                 <TextBlock HorizontalAlignment="Center"
                                                            Margin="3"
-                                                           Text="{Binding Name, Mode=OneTime}" />
+                                                           Text="{Binding Name, Mode=OneTime}"
+                                                           MaxWidth="{Binding ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Border}}}"
+                                                           TextWrapping="WrapWithOverflow" />
                                             </StackPanel>
                                         </Border>
                                     </Grid>
