--- a/PatientRecordsModule/Views/RecordTypesProtocols/DefaultProtocolView.xaml
+++ b/PatientRecordsModule/Views/RecordTypesProtocols/DefaultProtocolView.xaml
@@ -1,9 +1,9 @@
-﻿<ResourceDictionary x:Class="PatientRecordsModule.Views.RecordTypesProtocols.DefaultProtocolView"
+﻿<ResourceDictionary x:Class="PatientRecordsModule.Views.RecordTypesProtocolViewModels.DefaultProtocolView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels.RecordTypesProtocols"
+             xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels.RecordTypesProtocolViewModels"
              xmlns:controls="clr-namespace:PatientRecordsModule.ViewModels"
              xmlns:views="clr-namespace:PatientRecordsModule.Views"
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
