--- a/PatientRecordsModule/Views/PersonRecordEditorView.xaml
+++ b/PatientRecordsModule/Views/PersonRecordEditorView.xaml
@@ -21,6 +21,13 @@
 
         <DataTemplate x:Key="SelectedBrigadeItemTemplate">
             <StackPanel>
+                <Button Command="{Binding RemoveRecordMemberCommand}" ToolTip="Удалить из бригады" Visibility="{Binding IsPersonMember, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+                    <Button.Template>
+                        <ControlTemplate>
+                            <Image Source="pack://application:,,,/Core;Component/Resources/Images/Remove.png" Height="16" Width="16" HorizontalAlignment="Right"/>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
                 <Image Source="pack://application:,,,/Core;Component/Resources/Images/Man48x48.png" Height="48" Width="48"/>
                 <TextBlock Text="{Binding RoleName}" TextAlignment="Center"/>
                 <ComboBox ItemsSource="{Binding PersonStaffs}" DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding PersonStaffId}"/>
@@ -57,8 +64,12 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ListBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" ItemContainerStyle="{StaticResource ContainerStyle}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" BorderBrush="Black" Margin="2,0,2,2"
+            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Text="{Binding RecordTypeName}" FontWeight="Bold" FontSize="20" TextAlignment="Center" HorizontalAlignment="Stretch"/>
+            <ListBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" ItemContainerStyle="{StaticResource ContainerStyle}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" BorderBrush="Black" Margin="2,0,2,2"
                         ItemsSource="{Binding Brigade}">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -66,23 +77,33 @@
                     </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
             </ListBox>
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="Период оказания" Margin="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <ComboBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch"
+            <TextBlock Grid.Row="2" Grid.Column="0" Text="Случай:" Margin="2" HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="{Binding IsVisibleVisits, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
+            <ComboBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Visibility="{Binding IsVisibleVisits, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
+                      SelectedValuePath="Id" DisplayMemberPath="Name"  
+                      ItemsSource="{Binding ParentVisits}" 
+                      SelectedValue="{Binding ParentVisitId}"/>
+            <TextBlock Grid.Row="3" Grid.Column="0" Text="Кабинет:" Margin="2" HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="{Binding IsVisibleRooms, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
+            <ComboBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Visibility="{Binding IsVisibleRooms, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
+                      SelectedValuePath="Id" DisplayMemberPath="Name"  
+                      ItemsSource="{Binding Rooms}" 
+                      SelectedValue="{Binding RoomId}"/>
+            <TextBlock Grid.Row="4" Grid.Column="0" Text="Период оказания" Margin="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <ComboBox Grid.Row="4" Grid.Column="1" HorizontalAlignment="Stretch"
                       SelectedValuePath="Id" DisplayMemberPath="Name"  
                       ItemsSource="{Binding RecordPeriods}" 
                       SelectedValue="{Binding SelectedPeriodId}"/>
 
-            <TextBlock Grid.Row="2" Grid.Column="0" Text="Форма оказания" VerticalAlignment="Center" Margin="2" HorizontalAlignment="Left"/>
-            <ComboBox Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch"
+            <TextBlock Grid.Row="5" Grid.Column="0" Text="Форма оказания" VerticalAlignment="Center" Margin="2" HorizontalAlignment="Left"/>
+            <ComboBox Grid.Row="5" Grid.Column="1" HorizontalAlignment="Stretch"
                       SelectedValuePath="Id" DisplayMemberPath="Name" 
                       ItemsSource="{Binding Urgentlies}" 
                       SelectedValue="{Binding SelectedUrgentlyId}"/>
 
-            <TextBlock Grid.Row="1" Grid.Column="2" Text="Время начала услуги" VerticalAlignment="Center" Margin="2,4,2,3"/>
-            <toolkit:DateTimePicker Grid.Row="1" Grid.Column="3"  
+            <TextBlock Grid.Row="4" Grid.Column="2" Text="Время начала услуги" VerticalAlignment="Center" Margin="2,4,2,3"/>
+            <toolkit:DateTimePicker Grid.Row="4" Grid.Column="3"  
                                     Value="{Binding BeginDateTime}" 
                                     Watermark="Дата/время начала" Height="23" Width="190"/>
-            <StackPanel Grid.Row="2" Grid.Column="4" Orientation="Horizontal">
+            <StackPanel Grid.Row="5" Grid.Column="4" Orientation="Horizontal">
                 <TextBlock VerticalAlignment="Top" Margin="5,0">
                     <Hyperlink Command="{Binding SetCurrentDateTimeBeginCommand}">Текущее время</Hyperlink>
                 </TextBlock>
